<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.alois.aloismobile.ui.view.login.fragment.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/ic_logo"
        android:id="@+id/appLogo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/labelUsername"
        android:layout_below="@+id/appLogo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editUsername"
        android:inputType="textPersonName"
        android:layout_below="@+id/labelUsername"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/labelPassword"
        android:layout_below="@id/editUsername"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPassword"
        android:layout_below="@id/labelPassword"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/buttonSignIn"
        android:layout_below="@+id/editPassword"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_member_yet"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/buttonRegister"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_know_service_yet"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/know_more"
            android:id="@+id/buttonKnowMore"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

</RelativeLayout>
