<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.alois.aloismobile.ui.view.memory.fragment.MemoryDetailFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/memoryDetailTitleLabel"
        android:text="@string/memory_title"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/memoryDetailImageView"
        android:layout_below="@id/memoryDetailTitleLabel"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/memoryDetailDescriptionLabel"
        android:layout_below="@id/memoryDetailImageView"
        android:text="@string/memory_description"
        android:height="120dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/memoryDetailCreationDateLabel"
        android:text="@string/memory_creation_date"
        android:layout_below="@id/memoryDetailDescriptionLabel"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/memoryDetailEditButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/edit_memory"
        android:layout_toLeftOf="@+id/memoryDetailRequestDelete"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/memoryDetailRequestDelete"
        android:layout_alignParentEnd="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/request_delete_memory"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
