<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderFormTitleLabel"
        android:text="@string/reminder_title"
        android:layout_alignParentStart="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderFormTitleEdit"
        android:layout_below="@+id/reminderFormTitleLabel"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderFormDescriptionLabel"
        android:text="@string/reminder_description"
        android:layout_below="@+id/reminderFormTitleEdit"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderFormDescriptionEdit"
        android:layout_below="@+id/reminderFormDescriptionLabel"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderFormDatetimeLabel"
        android:text="@string/reminder_date_time"
        android:layout_below="@+id/reminderFormDescriptionEdit"/>
    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/reminderFormButtonSelectDate"
        android:layout_below="@+id/reminderFormDatetimeLabel"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:src="@drawable/ic_date_range_black_24dp"/>
    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/reminderFormButtonSelectTime"
        android:layout_below="@+id/reminderFormDatetimeLabel"
        android:layout_toRightOf="@+id/reminderFormButtonSelectDate"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:src="@drawable/ic_access_time_black_24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reminderFormDateView"
        android:layout_toRightOf="@+id/reminderFormButtonSelectTime"
        android:layout_below="@+id/reminderFormDatetimeLabel"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderFormRecurrencyLabel"
        android:layout_below="@+id/reminderFormButtonSelectDate"
        android:text="@string/recurrency"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderFormRadioGroup"
        android:layout_below="@+id/reminderFormRecurrencyLabel"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/reminderFormRadioOnce"
            android:tag="ONCE"
            android:text="@string/once"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/reminderFormRadioHourly"
            android:tag="HOURLY"
            android:text="@string/hourly"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/reminderFormRadioDaily"
            android:tag="DAILY"
            android:text="@string/daily"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/reminderFormRadioWeekly"
            android:tag="WEEKLY"
            android:text="@string/weekly"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reminderFormButtonCancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/cancel"
            android:layout_toLeftOf="@+id/reminderFormButtonSave"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reminderFormButtonSave"
            android:layout_alignParentEnd="true"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/save"/>
    </RelativeLayout>
</RelativeLayout>
